# diffusion-pipe-ui

./: .gitignore  .gitmodules  Dockerfile  README.md  captioner.py  default  docker-compose.yml  easy-install.sh  entrypoint.sh  gradio_interface.py  main.py  pyproject.toml  requirements.txt  start-new-ui.sh  start-ui.sh  start.sh  train.py
diffusion_pipe_ui/: __init__.py  config.py  dataset.py  download.py  interface.py  main.py  training.py  utils.py
docker/: entrypoint.sh  initialize.sh
examples/: hunyuan_video.toml  main_example.toml
models/: base.py  chroma.py  cosmos.py  flux.py  hunyuan_video.py  ltx_video.py  lumina_2.py  sdxl.py  wan.py
ui/: Program.cs  appsettings.json  appsettings.windows.json
ui/Components/: AlarmComponent.razor  App.razor  DatasetDirectoryConfiguration.razor  ModelsParametersConfiguration.razor  MonitoringParametersConfiguration.razor  TrainingParametersConfiguration.razor
ui/Database/: AppDbContext.cs
ui/Enums/: Dtype.cs  Optimizer.cs  PartitionMethod.cs  SampleMethod.cs  VideoClipMode.cs
ui/Migrations/: 20250307083151_Initial.Designer.cs  20250307083151_Initial.cs  AppDbContextModelSnapshot.cs
ui/Models/: DatasetConfiguration.cs  DatasetDirectoryConfiguration.cs  ModelConfiguration.cs  OptimizerConfiguration.cs
ui/Properties/: launchSettings.json
ui/Services/: FolderMonitorService.cs  ProcessManager.cs
ui/Utils/: CustomIcons.cs  Extensions.cs  FileHelper.cs  Tooltips.cs
ui/ViewModels/: AdapterConfigurationViewModel.cs  DatasetConfigurationViewModel.cs  DatasetViewModel.cs  DownloadRequest.cs  ModelConfigurationViewModel.cs  (+1 more)
(+321 files in other folders)
