[tool.poetry]
name = "diffusion-pipe-ui"
version = "0.1.0"
description = ""
authors = ["Alisson Pereira Anjos <100760760+vg-alisson-anjos@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gradio = "^5.8.0"
toml = "^0.10.2"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
