[tool.poetry]
name = "diffusion-pipe-ui"
version = "0.1.0"
description = "UI for training LoRA models with diffusion-pipe"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
gradio = "^4.19.2"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
